kubernetes/homelab/apps/homelab/homepage/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccount: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.0.4
          ports:
            - containerPort: 3000
              name: homepage
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: homepage-config-volume
              # NOTE: Homepage expects this at a specific location, which we've matched here.
              mountPath: /app/config
            - name: logs
              mountPath: /app/config/logs
      volumes:
        - name: homepage-config-volume
          configMap:
            name: homepage-config
        - name: logs
          emptyDir: {}
