kubernetes/homelab/apps/homelab/homepage/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - protocol: TCP
      name: homepage
      port: 3000
      targetPort: 3000
  type: ClusterIP
