kubernetes/homelab/apps/homelab/homepage/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.drmoo.io
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - home.drmoo.io
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
