kubernetes/homelab/apps/homelab/homepage/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/secret-name: drmoo-io-tls
    external-dns.alpha.kubernetes.io/target: internal.drmoo.io
spec:
  ingressClassName: internal
  rules:
    - host: home.drmoo.io
      http:
        paths:
          - backend:
              service:
                name: homepage
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "*.drmoo.io"
      secretName: drmoo-io-tls
